# gbs_prism

./: .gitignore  Makefile  README.md  SelfRelDepth.r  SelfRelDepth.sh  SelfRelDepthtoHTML.py  _run_gbs_qc  addRun.sh  add_sample_sheet_header.py  add_tags.py  ag_gbs_qc_prism.mk  ag_gbs_qc_prism.sh  annotateSelfRelDepth.py  annotate_sample_lowdepth.sh  autostart_gbs_qc  barcode_yields_plots.r  batch_re_kgd.sh  check_demultiplex.py  check_repo_file_refs.sh  clean_kseq.sh  collate_barcode_yields.py  collate_tags_reads.py  count_tags.py  database_prism.sh  debug_barcodes.sh  deleteKeyfile.psql  deleteKeyfile.sh  deleteRun.sh  delete_run_yields.psql  demultiplex_example.sh  demultiplex_example_2.sh  demultiplex_example_3.sh  demultiplex_prism.mk  demultiplex_prism.sh  dump_gbs_tables.psql  fill_in_ref_indexes.psql  fill_in_taxid.psql  flake.nix  gbs_prism.mk  gbs_prism.nf  (+68 more)
.github/workflows/: test-suite.yml
R-scripts/: run_GUSbase.R  run_kgd.R
agr/: sample_sheet.py  sequencer_run.py
config/: cluster-executor.jsonnet  cluster-executor.libsonnet  eri-executor.jsonnet  legacy-hpc-deployment.jsonnet  pipeline_config.yaml  psij-executor.jsonnet  psij-executor.libsonnet
config/redun.dev/: redun.ini
config/redun.prod/: redun.ini
config/redun.test/: redun.ini
context/: eri-dev.json  eri-prod.json  eri-test.json  home.json  home.tiny.json  legacy-hpc-playpen.json
doc/: beta-binomial-adjustment.md  gp_processflowcell_cheatsheet.docx
eri/: install
etc/: database_env.src  dedup_slurm_array_job  gbs_qc_slurm_array_job  larger_mem_slurm_array_job  longer_running_slurm_array_job  medium_mem_slurm_array_job  reference_genomes.csv  sample_sheet_header.csv  tardis.toml
modules/: bclconvert.nf  clean_samplesheet.nf  create_gbs_keyfiles.nf  cutadapt.nf  dedupe.nf  determine_cohorts.nf  kmer_analysis.nf  sanitise_fastq_file_names.nf  standardise_samplesheet.nf
modules.fake/: bclconvert.nf
modules/bwa/: aln.nf  localise_index.nf  samse.nf
modules/cohort/: bwa.nf
modules/seqtk/: sample_rate.nf
nextflow/24.11.0-edge/: deps.json  package.nix
profile/default/: config.yaml
src/: barcode_yields_plots.R  run_GUSbase.R  run_kgd.R  tag_count_plots.R
src/agr/: dask.py
src/agr/fake/: bclconvert.py
src/agr/gbs_prism/: GUSbase.py  __init__.py  cohort.py  cohort_specs.py  cohorts.py  collate_tags_reads.py  data_prism.py  deployment_config.py  enzyme_sub.py  exceptions.py  gbs_keyfiles.py  gbs_target_spec.py  gbs_targets.py  kgd.py  (+16 more)
utils/: SelfRelDepth.r  SelfRelDepth.sh  SelfRelDepthtoHTML.py  annotateSelfRelDepth.py  annotate_sample_lowdepth.sh  anonymise_SVS_tsv.py  augment_singleton_hapmap.py  barcode_duplicates.sql  check_demultiplex.py  check_links.sh  collate_adapter_content.py  debug_barcodes.sh  fix_fallow1.psql  fix_fallow2.psql  get_historical_beta.sh  get_historical_beta_plus.sh  get_resource_usage.sh  lab_reports.py  makeWarehouseImport.py  make_b_links.sh  parse_sacct_cpu.py  patch_fastq.py  preenFileSystem.py  re_barcode.py  reconcile_contaminants.py  remove_qcsample_columns.py  reprocess_gbs_qc.sh  sanitiseKeyFile.py  sanitiseSampleSheet.py  strip_N.py  subtract_fastq.py  translate_genotypes.py
workflow/: 1_fastq.smk  config.py  w1_fastq.py  w1_fastq.smk  w2_cohorts.smk
workflow/agr/: bclconvert.py  postprocessor.py  sample_sheet.py  sequencer_run.py
(+100 files in other folders)
