[project]
name = "gbs_prism"
version = "0.1.0a1"
description = "GBS Prism pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Alan McCulloch", email = "alan.mcculloch@agresearch.co.nz" },
  { name = "Simon Guest", email = "simon.guest@agresearch.co.nz" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.scripts]
get_reads_tags_per_sample = "agr.gbs_prism.get_reads_tags_per_sample:main"
summarise_read_and_tag_counts = "agr.gbs_prism.summarise_read_and_tag_counts:main"
tags_to_fasta = "agr.seq.tags_to_fasta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/agr"]

[tool.pyright]
reportUnusedCallResult = "warning"
