[project]
name = "gbs_prism"
version = "0.1.0a1"
description = "GBS Prism pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Alan McCulloch", email = "alan.mcculloch@agresearch.co.nz" },
  { name = "Simon Guest", email = "simon.guest@agresearch.co.nz" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
    "biopython>=1.85",
    "geno-import",
    "gquery",
    "jinja2>=3.1.6",
    "jsonnet>=0.21.0",
    "pdf2image>=1.17.0",
    "psij-python>=0.9.10",
    "pydantic>=2.11.4",
    "redun>=0.26.0",
    "wand>=0.6.13",
]

[project.scripts]
kmer_prism = "agr.gbs_prism.kmer_prism:main"
get_reads_tags_per_sample = "agr.gbs_prism.get_reads_tags_per_sample:main"
summarise_read_and_tag_counts = "agr.gbs_prism.summarise_read_and_tag_counts:main"
tags_to_fasta = "agr.seq.tags_to_fasta:main"
get_dedupe_log = "agr.gbs_prism.get_dedupe_log:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/agr"]

[tool.pyright]
reportUnusedCallResult = "warning"

[tool.uv.sources]
gquery = { git = "ssh://k-devops-pv01.agresearch.co.nz/tfs/Scientific/Bioinformatics/_git/gquery" }
geno-import = { git = "ssh://k-devops-pv01.agresearch.co.nz/tfs/Scientific/Bioinformatics/_git/geno_import" }
